tests/builtin_uses/builtin_uses.exp
Error ------------------------------------------------------------------------------------------------------ test.js:2:2

Cannot cast `o.foo` to string because number [1] is incompatible with string [2].

   test.js:2:2
   2| (o.foo: string);
       ^^^^^

References:
   test.js:1:32
   1| const o = Object.freeze({ foo: 0 });
                                     ^ [1]
   test.js:2:9
   2| (o.foo: string);
              ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test2.js:2:2

Cannot cast `o.foo` to string because number [1] is incompatible with string [2].

   test2.js:2:2
   2| (o.foo: string);
       ^^^^^

References:
   test.js:1:32
   1| const o = Object.freeze({ foo: 0 });
                                     ^ [1]
   test2.js:2:9
   2| (o.foo: string);
              ^^^^^^ [2]



Found 2 errors
